--- a/Demo3/DOCUMENTATION/UI/READER_LAYOUT.ipynb
+++ b/Demo3/DOCUMENTATION/UI/READER_LAYOUT.ipynb
@@ -153,7 +153,7 @@
     "    )\n",
     "    return layout[\"body\"].update(body)\n",
     "\n",
-    "# this gets all transactions from all accounts\n",
+    "# this gets all transactions from all accounts along with the account name they belong to\n",
     "def transaction_view_panel(state, layout):\n",
     "    \"\"\"\n",
     "    Update the reader's body with summary view content based on the current state\n",
@@ -168,11 +168,15 @@
     "    # get all accounts from state to access their transactions\n",
     "    accounts = state.get(\"accounts\", [])\n",
     "\n",
-    "    # get all transactions from all accounts\n",
-    "    transactions = [trans for account in accounts for trans in account.get(\"transactions\", [])]\n",
+    "    # get all transactions and the account name they belong to\n",
+    "    transactions_with_account_names = [\n",
+    "        {**trans, \"account_name\": account.get(\"name\", \"Unknown\")}\n",
+    "        for account in accounts\n",
+    "        for trans in account.get(\"transactions\", [])\n",
+    "    ]\n",
     "\n",
     "    # create a table for all transactions\n",
-    "    transactions_table = create_transaction_table(transactions)\n",
+    "    transactions_table = create_transaction_table(transactions_with_account_names)\n",
     "\n",
     "    # create a panel with the transactions table\n",
     "    # tables_panel = Columns([transactions_table])\n",
@@ -183,6 +187,7 @@
     "        box=box.ROUNDED\n",
     "    )\n",
     "    return layout[\"body\"].update(body)\n",
+    "\n",
     "\n",
     "def account_view_panel(state, layout):\n",
     "    \"\"\"\n",
@@ -261,30 +266,6 @@
     "\n",
     "#================================================================================================"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16926bfb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b13fc27d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a5d40d4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
