--- a/Demo3/DOCUMENTATION/MENU/AddNewTransaction.ipynb
+++ b/Demo3/DOCUMENTATION/MENU/AddNewTransaction.ipynb
@@ -5,7 +5,12 @@
    "id": "54d5909e",
    "metadata": {},
    "source": [
-    "# Option 2: Add New Transaction"
+    "# Option 2: Add New Transaction\n",
+    "- `new_transaction()`\n",
+    "    - `add_new_transaction()`: gets transaction details, subtracts the amount from account balance and adds a transaction to an account in the shared state\n",
+    "        - `get_new_transaction_details()`: prompts user for new transaction details and returns new transaction details as a dictionary\n",
+    "        - `subtract_from_balance()`: subtract the transaction amount from the account balance\n",
+    "    "
    ]
   },
   {
