--- a/Demo3/DOCUMENTATION/MENU/ChangeView.ipynb
+++ b/Demo3/DOCUMENTATION/MENU/ChangeView.ipynb
@@ -5,7 +5,63 @@
    "id": "9859b358",
    "metadata": {},
    "source": [
-    "# Option 3: Change View"
+    "# Option 3: Change View\n",
+    "- view choices `SUMMARY`, `ACCOUNTS`, `TRANSACTIONS`\n",
+    "- chosen view gets added to state `\"current_view\"` value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1de23f4d",
+   "metadata": {},
+   "source": [
+    "**choose_view() function is used to allow the choose a view from available views**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfdd8545",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def choose_view(console):\n",
+    "    \"\"\"\n",
+    "    Choose a view from available views\n",
+    "    param console: Console - The Rich Console object to use for output\n",
+    "    return: str - The selected view name\n",
+    "    \"\"\"\n",
+    "    views = [\"SUMMARY\", \"ACCOUNTS\", \"TRANSACTIONS\"]\n",
+    "    view = Prompt.ask(\"Select View\", choices=views)\n",
+    "    console.print(f\"\\n[bold blue]Selected View: {view}[/bold blue]\")\n",
+    "    return view"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b029fd0",
+   "metadata": {},
+   "source": [
+    "**change_current_view() function is used to change the current view in the shared state**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "766514ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def change_current_view(new_view):\n",
+    "    \"\"\"\n",
+    "    Change the current view in the shared state.\n",
+    "    param new_view: str - The new view to set\n",
+    "    \"\"\"\n",
+    "    state = read_shared_state()\n",
+    "    if state:\n",
+    "        state[\"current_view\"] = new_view\n",
+    "        write_shared_state(state)"
    ]
   }
  ],
