--- a/Demo3/DOCUMENTATION/MENU/AddNewAccount.ipynb
+++ b/Demo3/DOCUMENTATION/MENU/AddNewAccount.ipynb
@@ -5,7 +5,10 @@
    "id": "5a68244c",
    "metadata": {},
    "source": [
-    "# Option 1 : Add New Account"
+    "# Option 1 : Add New Account\n",
+    "- `new_account()` Prompt user for new account details and write to shared state using \n",
+    "    - `add_new_account()`: adds new account details to state\n",
+    "    - `get_new_account_details()`: prompt the user for new account details and returns the new account details as a dictionary"
    ]
   },
   {
@@ -35,8 +38,6 @@
     "   new_account_details = get_new_account_details(console)\n",
     "   state[\"accounts\"].append(new_account_details)\n",
     "   return state\n",
-    "\n",
-    "\n",
     "#=================================================================================\n",
     "\n",
     "\n",
