--- a/Demo3/DOCUMENTATION/UI/READER_LAYOUT.ipynb
+++ b/Demo3/DOCUMENTATION/UI/READER_LAYOUT.ipynb
@@ -8,10 +8,9 @@
     "# `reader_layout.py`\n",
     "**Contains 5 reader layout functions**\n",
     "- `create_reader_layout()`\n",
-    "- `show_current_view(state, layout)`\n",
-    "- `summary_view_panel(state, layout)`\n",
-    "- `transaction_view_panel(state, layout)`\n",
-    "- `account_view_panel(state, layout)`"
+    "- `show_current_view()`\n",
+    "- `create_summary_view()`\n",
+    "- `create_panel()`"
    ]
   },
   {
@@ -102,11 +101,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# From reader_layouts.py\n",
-    "#================================================================================================\n",
     "def show_current_view(state, layout):\n",
     "    \"\"\"\n",
-    "    Update the reader's body based on the current view in state\n",
+    "    Update the reader's body with content based on the current view in state\n",
     "    param state: dict - The current state dictionary\n",
     "    param layout: Layout - The Rich Layout object to update\n",
     "    return: layout - The updated Rich Layout object\n",
@@ -114,157 +111,67 @@
     "\n",
     "    current_view = state.get(\"current_view\", \"SUMMARY\")\n",
     "    if current_view == \"SUMMARY\":\n",
-    "        return summary_view_panel(state, layout)\n",
+    "        return create_panel(state, create_summary_view, layout)\n",
     "    elif current_view == \"ACCOUNTS\":\n",
-    "        return account_view_panel(state, layout)\n",
+    "        return create_panel(state, create_account_table, layout)\n",
     "    elif current_view == \"TRANSACTIONS\":\n",
-    "        return transaction_view_panel(state, layout)\n",
+    "        return create_panel(state, create_transaction_table, layout)\n",
     "    else:\n",
     "        return layout\n",
+    "    \n",
     "\n",
-    "def summary_view_panel(state, layout):\n",
+    "\n",
+    "    def create_summary_view(accounts):\n",
     "    \"\"\"\n",
-    "    Update the reader's body with summary view content based on the current state\n",
-    "    param state: dict - The current state dictionary\n",
-    "    param layout: Layout - The Rich Layout object to update\n",
-    "    return: layout - The updated Rich Layout object\n",
+    "    Create a summary view with both accounts and transactions tables\n",
+    "    param accounts: list - List of account dictionaries\n",
+    "    return: Panel - A Rich Panel object containing both tables\n",
     "    \"\"\"\n",
-    "\n",
-    "    # get the current view from state to display in the title\n",
-    "    current_view = state.get(\"current_view\", None)\n",
-    "\n",
-    "    # get all accounts from state to access each account and their transactions\n",
-    "    accounts = state.get(\"accounts\", [])\n",
-    "\n",
     "    # account table with all accounts\n",
     "    all_accounts_table = create_account_table(accounts)\n",
     "\n",
     "    # transaction table with all transactions from all accounts\n",
-    "    transactions = [trans for account in accounts for trans in account.get(\"transactions\", [])]\n",
-    "    transactions_table = create_transaction_table(transactions)\n",
+    "    transactions_table = create_transaction_table(accounts)\n",
     "\n",
     "    # add both tables side by side in a columns panel\n",
     "    tables_panel = Columns([all_accounts_table, transactions_table])\n",
-    "    body = Panel(\n",
-    "        Align.center(tables_panel, vertical=\"middle\"),\n",
-    "        title=current_view,\n",
-    "        border_style=\"green\",\n",
-    "        box=box.ROUNDED\n",
-    "    )\n",
-    "    return layout[\"body\"].update(body)\n",
     "\n",
-    "# this gets all transactions from all accounts along with the account name they belong to\n",
-    "def transaction_view_panel(state, layout):\n",
+    "    return tables_panel\n",
+    "\n",
+    "def create_panel(state, func, layout):\n",
     "    \"\"\"\n",
-    "    Update the reader's body with summary view content based on the current state\n",
+    "    Update the reader's body with content based on the current state and provided function\n",
     "    param state: dict - The current state dictionary\n",
+    "    param func: function - The function to create the table (either account or transaction)\n",
     "    param layout: Layout - The Rich Layout object to update\n",
     "    return: layout - The updated Rich Layout object\n",
     "    \"\"\"\n",
     "\n",
-    "    # get the current view from state to display in the title\n",
-    "    current_view = state.get(\"current_view\", None)\n",
-    "\n",
-    "    # get all accounts from state to access their transactions\n",
-    "    accounts = state.get(\"accounts\", [])\n",
-    "\n",
-    "    # get all transactions and the account name they belong to\n",
-    "    transactions_with_account_names = [\n",
-    "        {**trans, \"account_name\": account.get(\"name\", \"Unknown\")}\n",
-    "        for account in accounts\n",
-    "        for trans in account.get(\"transactions\", [])\n",
-    "    ]\n",
-    "\n",
-    "    # create a table for all transactions\n",
-    "    transactions_table = create_transaction_table(transactions_with_account_names)\n",
-    "\n",
-    "    # create a panel with the transactions table\n",
-    "    # tables_panel = Columns([transactions_table])\n",
-    "    body = Panel(\n",
-    "        Align.center(transactions_table, vertical=\"middle\"),\n",
-    "        title=current_view,\n",
-    "        border_style=\"green\",\n",
-    "        box=box.ROUNDED\n",
-    "    )\n",
-    "    return layout[\"body\"].update(body)\n",
-    "\n",
-    "\n",
-    "def account_view_panel(state, layout):\n",
-    "    \"\"\"\n",
-    "    Update the reader's body with summary view content based on the current state\n",
-    "    param state: dict - The current state dictionary\n",
-    "    param layout: Layout - The Rich Layout object to update\n",
-    "    return: layout - The updated Rich Layout object\n",
-    "    \"\"\"\n",
     "\n",
     "    current_view = state.get(\"current_view\", None)\n",
     "    accounts = state.get(\"accounts\", [])\n",
-    "    all_accounts_table = create_account_table(accounts)\n",
-    "    tables_panel = Columns([all_accounts_table])\n",
-    "    body = Panel(\n",
-    "        Align.center(tables_panel, vertical=\"middle\"),\n",
-    "        title=current_view,\n",
-    "        border_style=\"green\",\n",
-    "        box=box.ROUNDED\n",
-    "    )\n",
-    "    return layout[\"body\"].update(body)\n",
     "\n",
-    "#================================================================================================\n",
-    "\n",
-    "\n",
-    "# From accounts_layouts.py\n",
-    "#================================================================================================\n",
-    "\n",
-    "def create_account_table(accounts):\n",
-    "    \"\"\"\n",
-    "    Create a Rich Table to display account information\n",
-    "    param accounts: list - A list of account dictionaries\n",
-    "    return: Table - A Rich Table object containing account information\n",
-    "    \"\"\"\n",
     "    if not accounts:\n",
     "        content = Text(\"No accounts available.\", justify=\"center\", style=\"white\")\n",
     "        return content\n",
+    "    elif func == create_summary_view:\n",
+    "        tables_panel = create_summary_view(accounts)\n",
+    "        body = Panel(\n",
+    "            Align.center(tables_panel, vertical=\"middle\"),\n",
+    "            title=current_view,\n",
+    "            border_style=\"green\",\n",
+    "            box=box.ROUNDED\n",
+    "        )\n",
+    "        return layout[\"body\"].update(body)\n",
     "    else:\n",
-    "        table = Table(title=\"Accounts Overview\", box=box.SIMPLE_HEAVY)\n",
-    "        table.add_column(\"Account Name\", style=\"cyan\", no_wrap=True)\n",
-    "        table.add_column(\"Account Type\", style=\"magenta\")\n",
-    "        table.add_column(\"Balance\", justify=\"right\", style=\"green\")\n",
-    "\n",
-    "        for account in accounts:\n",
-    "            table.add_row(\n",
-    "                account.get(\"name\", \"Unnamed\"),\n",
-    "                account.get(\"type\", \"N/A\"),\n",
-    "                f\"${account.get('balance', 0):.2f}\"\n",
-    "            )\n",
-    "    return table\n",
-    "\n",
-    "\n",
-    "# From transactions_layouts.py\n",
-    "#================================================================================================\n",
-    "\n",
-    "def create_transaction_table(transactions):\n",
-    "    \"\"\"\n",
-    "    Create a Rich Table to display transaction information\n",
-    "    param transactions: list - A list of transaction dictionaries\n",
-    "    return: Table - A Rich Table object containing transaction information\n",
-    "    \"\"\"\n",
-    "    if not transactions:\n",
-    "        content = Text(\"No transactions available.\", justify=\"center\", style=\"white\")\n",
-    "        return content\n",
-    "    else:\n",
-    "        table = Table(title=\"Transactions\", box=box.SIMPLE_HEAVY)\n",
-    "        table.add_column(\"Amount\", justify=\"right\", style=\"green\")\n",
-    "        table.add_column(\"Description\", style=\"yellow\")\n",
-    "\n",
-    "        for transaction in transactions:\n",
-    "            table.add_row(\n",
-    "                f\"${transaction.get('amount', 0):.2f}\",\n",
-    "                transaction.get(\"description\", \"No description\")\n",
-    "            )\n",
-    "    return table\n",
-    "\n",
-    "\n",
-    "#================================================================================================"
+    "        table = func(accounts)\n",
+    "        body = Panel(\n",
+    "            Align.center(table, vertical=\"middle\"),\n",
+    "            title=current_view,\n",
+    "            border_style=\"green\",\n",
+    "            box=box.ROUNDED\n",
+    "        )\n",
+    "        return layout[\"body\"].update(body)\n"
    ]
   }
  ],
