--- a/Demo3/DOCUMENTATION/UI/READER_LAYOUT.ipynb
+++ b/Demo3/DOCUMENTATION/UI/READER_LAYOUT.ipynb
@@ -101,6 +101,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#================================================================================================\n",
+    "# Uses \n",
+    "    # create_account_table from accounts_layout.py\n",
+    "    # create_transaction_table from transactions_layout.py\n",
+    "#================================================================================================\n",
     "def show_current_view(state, layout):\n",
     "    \"\"\"\n",
     "    Update the reader's body with content based on the current view in state\n",
@@ -120,8 +125,13 @@
     "        return layout\n",
     "    \n",
     "\n",
-    "\n",
-    "    def create_summary_view(accounts):\n",
+    "#================================================================================================\n",
+    "# Uses \n",
+    "    # create_account_table from accounts_layout.py\n",
+    "    # create_transaction_table from transactions_layout.py\n",
+    "# used in show_current_view()\n",
+    "#================================================================================================\n",
+    "def create_summary_view(accounts):\n",
     "    \"\"\"\n",
     "    Create a summary view with both accounts and transactions tables\n",
     "    param accounts: list - List of account dictionaries\n",
@@ -138,6 +148,10 @@
     "\n",
     "    return tables_panel\n",
     "\n",
+    "#================================================================================================\n",
+    "# high-order function to create panel based on state and function\n",
+    "# used in show_current_view()\n",
+    "#================================================================================================\n",
     "def create_panel(state, func, layout):\n",
     "    \"\"\"\n",
     "    Update the reader's body with content based on the current state and provided function\n",
