--- a/Demo3/DOCUMENTATION/UTILS/ACCOUNT.ipynb
+++ b/Demo3/DOCUMENTATION/UTILS/ACCOUNT.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "# `account.py`\n",
-    "**Contains utility functions for account management**"
+    "**Contains utility functions for account management**\n",
+    "- `add_new_account()` : used in writer.py to add a new account"
    ]
   },
   {
@@ -16,11 +17,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#  uses `get_new_account_details` from ui.writer_layout \n",
+    "#========================================================================================\n",
+    "# Uses\n",
+    "    # get_new_account_details() from ui.account_layout\n",
+    "#========================================================================================\n",
     "\n",
     "from rich.prompt import Prompt\n",
-    "\n",
-    "# this function is used in writer.py to add a new account\n",
     "def add_new_account(state, console):\n",
     "   \"\"\"\n",
     "      Adds a new account to the shared state\n",
@@ -34,40 +36,7 @@
     "   # Add new account to state\n",
     "   state[\"accounts\"].append(new_account_details)\n",
     "   return state\n",
-    "\n",
-    "\n",
-    "#========================================================================================\n",
-    "\n",
-    "def get_new_account_details(console):\n",
-    "    \"\"\"\n",
-    "      Prompt user for new account details and return as a dictionary.\n",
-    "      param console: Console - The Rich Console object to use for input/output\n",
-    "      return: dict - A dictionary containing the new account details\n",
-    "    \"\"\"\n",
-    "\n",
-    "    console.print(\"\\n[bold green]Add New Account[/bold green]\")\n",
-    "\n",
-    "    account_name = Prompt.ask(\"Enter Account Name: \")\n",
-    "    account_type = Prompt.ask(\"Enter Account Type (e.g., Savings, Checking): \")\n",
-    "    initial_balance = Prompt.ask(\"Enter Initial Balance: \")\n",
-    "\n",
-    "    try:\n",
-    "        initial_balance = float(initial_balance)\n",
-    "    except ValueError:\n",
-    "        console.print(\"[red]Invalid balance amount. Please enter a numeric value.[/red]\")\n",
-    "        return\n",
-    "\n",
-    "        # Add new account to state\n",
-    "    new_account_details = {\n",
-    "        \"name\": account_name,\n",
-    "        \"type\": account_type,\n",
-    "        \"balance\": initial_balance\n",
-    "    }\n",
-    "\n",
-    "    console.print(f\"[bold green]Account '{account_name}' added successfully![/bold green]\\n\")\n",
-    "    return new_account_details\n",
-    "\n",
-    "#========================================================================================\n"
+    "\n"
    ]
   }
  ],
