--- a/Demo3/DOCUMENTATION/UTILS/TRANSACTIONS.ipynb
+++ b/Demo3/DOCUMENTATION/UTILS/TRANSACTIONS.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "source": [
     "# `transactions.py`\n",
-    "**Contains utility functions for handling transactions**"
+    "**Contains utility functions for handling transactions**\n",
+    "- `add_new_transaction()` : used in writer.py to add a new transaction\n",
+    "- `subtract_from_balance()` : used by `add_new_transaction()`"
    ]
   },
   {
@@ -16,11 +18,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# uses `get_new_transaction_details` from ui.writer_layout\n",
-    "# uses `subtract_from_balance` from utils.transactions\n",
-    "from rich.prompt import Prompt\n",
-    "\n",
-    "# this function is used in writer.py to add a new transaction\n",
+    "#========================================================================================\n",
+    "# Uses\n",
+    "    # subtract_from_balance()\n",
+    "    # get_new_transaction_details() from ui.transaction_layout\n",
+    "#========================================================================================\n",
     "def add_new_transaction(state, console):\n",
     "    \"\"\"\n",
     "        Add a transaction to an account in the shared state\n",
@@ -79,30 +81,7 @@
     "   for account in accounts:\n",
     "       if account['name'] == account_name:\n",
     "           account['balance'] -= amount\n",
-    "#========================================================================================\n",
-    "\n",
-    "#========================================================================================\n",
-    "def get_new_transaction_details(account_names, console):\n",
-    "    \"\"\"\n",
-    "    Prompt user for new transaction details and return as a dictionary.\n",
-    "    param console: Console - The Rich Console object to use for input/output\n",
-    "    param account_names: list - A list of account names to choose from\n",
-    "    return: dict - A dictionary containing the new transaction details\n",
-    "    \"\"\"\n",
-    "    console.print(\"\\n[bold green]Add Transaction[/bold green]\")\n",
-    "    account_name = Prompt.ask(\"Select Account\", choices=account_names)\n",
-    "    amount = float(Prompt.ask(\"Enter Amount\"))\n",
-    "    description = Prompt.ask(\"Enter Description\")\n",
-    "\n",
-    "    transaction_details = {\n",
-    "        \"account_name\": account_name,\n",
-    "        \"amount\": amount,\n",
-    "        \"description\": description\n",
-    "    }\n",
-    "\n",
-    "    console.print(f\"[bold green]Transaction added to account '{account_name}' successfully![/bold green]\\n\")\n",
-    "    return transaction_details\n",
-    "    #========================================================================================"
+    "#========================================================================================"
    ]
   }
  ],
