--- a/Demo3/DOCUMENTATION/UI/ACCOUNTS_LAYOUT.ipynb
+++ b/Demo3/DOCUMENTATION/UI/ACCOUNTS_LAYOUT.ipynb
@@ -4,20 +4,63 @@
    "cell_type": "markdown",
    "id": "771aacec",
    "metadata": {},
-   "source": []
+   "source": [
+    "# `accounts_layout.py`\n",
+    "- Account Writer Layout Specific Components\n",
+    "    - `get_new_account_details()`\n",
+    "- Account Reader Layout Specific Components\n",
+    "    - `create_account_table()`"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dbcfc892",
+   "cell_type": "markdown",
+   "id": "bdcdfdfc",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Used by account_view_panel in reader_layout.py\n",
-    "from rich.text import Text\n",
-    "from rich.table import Table\n",
-    "from rich import box\n",
+    "### Used by account.py\n",
     "\n",
+    "```python\n",
+    "\n",
+    "def get_new_account_details(console):\n",
+    "    \"\"\"\n",
+    "    Prompt user for new account details and return as a dictionary.\n",
+    "    param console: Console - The Rich Console object to use for input/output\n",
+    "    return: dict - A dictionary containing the new account details\n",
+    "    \"\"\"\n",
+    "\n",
+    "    console.print(\"\\n[bold green]Add New Account[/bold green]\")\n",
+    "\n",
+    "    account_name = Prompt.ask(\"Enter Account Name: \")\n",
+    "    account_type = Prompt.ask(\"Enter Account Type (e.g., Savings, Checking): \")\n",
+    "    initial_balance = Prompt.ask(\"Enter Initial Balance: \")\n",
+    "\n",
+    "    try:\n",
+    "        initial_balance = float(initial_balance)\n",
+    "    except ValueError:\n",
+    "        console.print(\"[red]Invalid balance amount. Please enter a numeric value.[/red]\")\n",
+    "        return\n",
+    "\n",
+    "        # Add new account to state\n",
+    "    new_account_details = {\n",
+    "        \"name\": account_name,\n",
+    "        \"type\": account_type,\n",
+    "        \"balance\": initial_balance\n",
+    "    }\n",
+    "\n",
+    "    console.print(f\"[bold green]Account '{account_name}' added successfully![/bold green]\\n\")\n",
+    "    return new_account_details\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cdf17b3a",
+   "metadata": {},
+   "source": [
+    "### Used by reader_layout.py\n",
+    "\n",
+    "```python\n",
     "def create_account_table(accounts):\n",
     "    \"\"\"\n",
     "    Create a Rich Table to display account information\n",
@@ -39,7 +82,8 @@
     "                account.get(\"type\", \"N/A\"),\n",
     "                f\"${account.get('balance', 0):.2f}\"\n",
     "            )\n",
-    "    return table"
+    "    return table\n",
+    "```"
    ]
   }
  ],
