--- a/Demo3/DOCUMENTATION/UTILS/ACCOUNT.ipynb
+++ b/Demo3/DOCUMENTATION/UTILS/ACCOUNT.ipynb
@@ -11,18 +11,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "309a6fbb",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#========================================================================================\n",
-    "# Uses\n",
-    "    # get_new_account_details() from ui.account_layout\n",
-    "#========================================================================================\n",
+    "### Uses get_new_account_details() from ui.account_layout\n",
     "\n",
-    "from rich.prompt import Prompt\n",
+    "```python\n",
     "def add_new_account(state, console):\n",
     "   \"\"\"\n",
     "      Adds a new account to the shared state\n",
@@ -36,7 +31,7 @@
     "   # Add new account to state\n",
     "   state[\"accounts\"].append(new_account_details)\n",
     "   return state\n",
-    "\n"
+    "```"
    ]
   }
  ],
