--- a/Demo3/DOCUMENTATION/UTILS/TRANSACTIONS.ipynb
+++ b/Demo3/DOCUMENTATION/UTILS/TRANSACTIONS.ipynb
@@ -12,17 +12,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "fb44b8f0",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "### Uses\n",
+    "- `subtract_from_balance()`\n",
+    "- `get_new_transaction_details()` from transaction_layout.py\n",
+    "\n",
+    "```python\n",
     "#========================================================================================\n",
-    "# Uses\n",
-    "    # subtract_from_balance()\n",
-    "    # get_new_transaction_details() from ui.transaction_layout\n",
-    "#========================================================================================\n",
+    "\n",
     "def add_new_transaction(state, console):\n",
     "    \"\"\"\n",
     "        Add a transaction to an account in the shared state\n",
@@ -64,6 +64,7 @@
     "\n",
     "    # Return updated state\n",
     "    return state\n",
+    "#========================================================================================\n",
     "\n",
     "\n",
     "#========================================================================================\n",
@@ -81,7 +82,9 @@
     "   for account in accounts:\n",
     "       if account['name'] == account_name:\n",
     "           account['balance'] -= amount\n",
-    "#========================================================================================"
+    "#========================================================================================\n",
+    "\n",
+    "```"
    ]
   }
  ],
