--- a/Demo3/DOCUMENTATION/UI/TRANSACTIONS_LAYOUT.ipynb
+++ b/Demo3/DOCUMENTATION/UI/TRANSACTIONS_LAYOUT.ipynb
@@ -4,19 +4,54 @@
    "cell_type": "markdown",
    "id": "7864b029",
    "metadata": {},
-   "source": []
+   "source": [
+    "# `transactions_layout.py`\n",
+    "- Tranaction Writer Layout Specific Components\n",
+    "    - `get_new_transaction_details()`\n",
+    "- Tranaction Reader Layout Specific Components\n",
+    "    - `create_transaction_table()`"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "id": "9c16dc06",
+   "metadata": {},
+   "source": [
+    "### Used by transaction.py\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "def get_new_transaction_details(account_names, console):\n",
+    "    \"\"\"\n",
+    "    Prompt user for new transaction details and return as a dictionary.\n",
+    "    param console: Console - The Rich Console object to use for input/output\n",
+    "    param account_names: list - A list of account names to choose from\n",
+    "    return: dict - A dictionary containing the new transaction details\n",
+    "    \"\"\"\n",
+    "    console.print(\"\\n[bold green]Add Transaction[/bold green]\")\n",
+    "    account_name = Prompt.ask(\"Select Account\", choices=account_names)\n",
+    "    amount = float(Prompt.ask(\"Enter Amount\"))\n",
+    "    description = Prompt.ask(\"Enter Description\")\n",
+    "\n",
+    "    transaction_details = {\n",
+    "        \"account_name\": account_name,\n",
+    "        \"amount\": amount,\n",
+    "        \"description\": description\n",
+    "    }\n",
+    "\n",
+    "    console.print(f\"[bold green]Transaction added to account '{account_name}' successfully![/bold green]\\n\")\n",
+    "    return transaction_details\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8bb09c34",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Used by transaction_view_panel in reader_layout.py\n",
-    "from rich.text import Text\n",
-    "from rich.table import Table\n",
-    "from rich import box\n",
+    "### Used by reader_layout.py\n",
+    "\n",
+    "```python\n",
     "\n",
     "def create_transaction_table(transactions):\n",
     "    \"\"\"\n",
@@ -37,7 +72,8 @@
     "                f\"${transaction.get('amount', 0):.2f}\",\n",
     "                transaction.get(\"description\", \"No description\")\n",
     "            )\n",
-    "    return table"
+    "    return table\n",
+    "```"
    ]
   }
  ],
