--- a/Demo3/DOCUMENTATION/UI/READER_LAYOUT.ipynb
+++ b/Demo3/DOCUMENTATION/UI/READER_LAYOUT.ipynb
@@ -5,41 +5,16 @@
    "id": "98eb3529",
    "metadata": {},
    "source": [
-    "# `reader_layout.py`\n",
-    "**Contains 5 reader layout functions**\n",
-    "- `create_reader_layout()`\n",
-    "- `show_current_view()`\n",
-    "- `create_summary_view()`\n",
-    "- `create_panel()`"
+    "# `reader_layout.py`"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a16fb8d4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from rich.layout import Layout\n",
-    "from rich.table import Table\n",
-    "from rich.panel import Panel\n",
-    "from rich.layout import Layout\n",
-    "from rich.align import Align\n",
-    "from rich import box\n",
-    "from rich.columns import Columns\n",
-    "from rich.text import Text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "64c8c6af",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#===============================================================================================\n",
-    "# Use common layout components(create_header, create_footer) fom common_layouts.py\n",
-    "\n",
+    "### Uses `create_header()` and `create_footer()` fom common_layouts.py\n",
+    "```python\n",
     "def create_reader_layout():\n",
     "    \"\"\"\n",
     "    Creates the base layout for the reader process\n",
@@ -65,47 +40,16 @@
     "    layout[\"footer\"].update(create_footer(footer_text))\n",
     "\n",
     "    return layout\n",
-    "#================================================================================================\n",
-    "\n",
-    "# From common_layouts.py\n",
-    "#================================================================================================\n",
-    "def create_header(header_text, color):\n",
-    "    \"\"\"\n",
-    "    Create the header section\n",
-    "    param header_text: str - The text to display in the header\n",
-    "    param color: str - The color style for the header text and border\n",
-    "    return: Panel - A Rich Panel object containing the header\n",
-    "    \"\"\"\n",
-    "    header_text = Text(header_text, style=f\"bold {color}\", justify=\"center\")\n",
-    "    return Panel(header_text, box=box.DOUBLE, border_style=color)\n",
-    "\n",
-    "def create_footer(footer_text):\n",
-    "    \"\"\"\n",
-    "    Create the footer section\n",
-    "    param footer_text: str - The text to display in the footer\n",
-    "    return: Panel - A Rich Panel object containing the footer\n",
-    "    \"\"\"\n",
-    "    footer_text = Text(\n",
-    "        footer_text,\n",
-    "        style=\"dim cyan\",\n",
-    "        justify=\"center\"\n",
-    "    )\n",
-    "    return Panel(footer_text, box=box.SIMPLE)\n",
-    "#================================================================================================"
+    "```"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "0698a981",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#================================================================================================\n",
-    "# Uses \n",
-    "    # create_account_table from accounts_layout.py\n",
-    "    # create_transaction_table from transactions_layout.py\n",
-    "#================================================================================================\n",
+    "### Uses `create_panel()` to create the current view\n",
+    "```python\n",
     "def show_current_view(state, layout):\n",
     "    \"\"\"\n",
     "    Update the reader's body with content based on the current view in state\n",
@@ -123,35 +67,17 @@
     "        return create_panel(state, create_transaction_table, layout)\n",
     "    else:\n",
     "        return layout\n",
-    "    \n",
-    "\n",
-    "#================================================================================================\n",
-    "# Uses \n",
-    "    # create_account_table from accounts_layout.py\n",
-    "    # create_transaction_table from transactions_layout.py\n",
-    "# used in show_current_view()\n",
-    "#================================================================================================\n",
-    "def create_summary_view(accounts):\n",
-    "    \"\"\"\n",
-    "    Create a summary view with both accounts and transactions tables\n",
-    "    param accounts: list - List of account dictionaries\n",
-    "    return: Panel - A Rich Panel object containing both tables\n",
-    "    \"\"\"\n",
-    "    # account table with all accounts\n",
-    "    all_accounts_table = create_account_table(accounts)\n",
-    "\n",
-    "    # transaction table with all transactions from all accounts\n",
-    "    transactions_table = create_transaction_table(accounts)\n",
-    "\n",
-    "    # add both tables side by side in a columns panel\n",
-    "    tables_panel = Columns([all_accounts_table, transactions_table])\n",
-    "\n",
-    "    return tables_panel\n",
-    "\n",
-    "#================================================================================================\n",
-    "# high-order function to create panel based on state and function\n",
-    "# used in show_current_view()\n",
-    "#================================================================================================\n",
+    "```\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a799efa",
+   "metadata": {},
+   "source": [
+    "### Higher Order Function used to create panel based on state and function\n",
+    "```python\n",
     "def create_panel(state, func, layout):\n",
     "    \"\"\"\n",
     "    Update the reader's body with content based on the current state and provided function\n",
@@ -185,7 +111,34 @@
     "            border_style=\"green\",\n",
     "            box=box.ROUNDED\n",
     "        )\n",
-    "        return layout[\"body\"].update(body)\n"
+    "        return layout[\"body\"].update(body)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed9ea2f7",
+   "metadata": {},
+   "source": [
+    "### Used to create summary view\n",
+    "```python\n",
+    "def create_summary_view(accounts):\n",
+    "    \"\"\"\n",
+    "    Create a summary view with both accounts and transactions tables\n",
+    "    param accounts: list - List of account dictionaries\n",
+    "    return: Panel - A Rich Panel object containing both tables\n",
+    "    \"\"\"\n",
+    "    # account table with all accounts\n",
+    "    all_accounts_table = create_account_table(accounts)\n",
+    "\n",
+    "    # transaction table with all transactions from all accounts\n",
+    "    transactions_table = create_transaction_table(accounts)\n",
+    "\n",
+    "    # add both tables side by side in a columns panel\n",
+    "    tables_panel = Columns([all_accounts_table, transactions_table])\n",
+    "\n",
+    "    return tables_panel\n",
+    "```"
    ]
   }
  ],
