--- a/Demo3/DOCUMENTATION/UI/COMMON_LAYOUTS.ipynb
+++ b/Demo3/DOCUMENTATION/UI/COMMON_LAYOUTS.ipynb
@@ -5,40 +5,36 @@
    "id": "c024fc7a",
    "metadata": {},
    "source": [
-    "# COMMON LAYOUT COMPONENTS\n",
+    "# `common_layouts.py`\n",
     "**Used by both reader and writer layouts**"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "5c6bf97b",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from rich import box\n",
-    "from rich.text import Text\n",
-    "from rich.panel import Panel\n",
-    "# Used in both Reader and Writer UIs to create header sections\n",
-    "def create_header(header_text, color):\n",
-    "    \"\"\"\n",
-    "    Create the header section\n",
-    "    param header_text: str - The text to display in the header\n",
-    "    param color: str - The color style for the header text and border\n",
-    "    return: Panel - A Rich Panel object containing the header\n",
-    "    \"\"\"\n",
-    "    header_text = Text(header_text, style=f\"bold {color}\", justify=\"center\")\n",
-    "    return Panel(header_text, box=box.DOUBLE, border_style=color)"
+    "### Used in both reader_layout.py and Writer UIs to create header sections\n",
+    "```python\n",
+    "    def create_header(header_text, color):\n",
+    "        \"\"\"\n",
+    "        Create the header section\n",
+    "        param header_text: str - The text to display in the header\n",
+    "        param color: str - The color style for the header text and border\n",
+    "        return: Panel - A Rich Panel object containing the header\n",
+    "        \"\"\"\n",
+    "        header_text = Text(header_text, style=f\"bold {color}\", justify=\"center\")\n",
+    "        return Panel(header_text, box=box.DOUBLE, border_style=color)\n",
+    "```"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "dccf6a73",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Used in both Reader and Writer UIs to create footer sections\n",
+    "### Used in both Reader and Writer UIs to create footer sections\n",
+    "```python\n",
     "def create_footer(footer_text):\n",
     "    \"\"\"\n",
     "    Create the footer section\n",
@@ -50,7 +46,8 @@
     "        style=\"dim cyan\",\n",
     "        justify=\"center\"\n",
     "    )\n",
-    "    return Panel(footer_text, box=box.SIMPLE)"
+    "    return Panel(footer_text, box=box.SIMPLE)\n",
+    "```"
    ]
   }
  ],
