--- a/Demo3/DOCUMENTATION/UI/READER_LAYOUT.ipynb
+++ b/Demo3/DOCUMENTATION/UI/READER_LAYOUT.ipynb
@@ -13,7 +13,8 @@
    "id": "64c8c6af",
    "metadata": {},
    "source": [
-    "### Uses `create_header()` and `create_footer()` fom common_layouts.py\n",
+    "### Reader Layout Function\n",
+    "- uses `create_header()` and `create_footer()` fom common_layouts.py\n",
     "```python\n",
     "def create_reader_layout():\n",
     "    \"\"\"\n",
