--- a/Demo3/DOCUMENTATION/UI/WRITER_LAYOUT.ipynb
+++ b/Demo3/DOCUMENTATION/UI/WRITER_LAYOUT.ipynb
@@ -5,215 +5,107 @@
    "id": "89a31eca",
    "metadata": {},
    "source": [
-    "# `writer_layout.py`\n",
-    "**Contains writer layout functions**"
+    "# `writer_layout.py`"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c5f5a6b2",
+   "cell_type": "markdown",
+   "id": "302b98cc",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Use common layout components(create_header, create_footer) fom common_layouts.py\n",
+    "### Writer Layout Function\n",
+    "- uses `create_header()` and `create_footer()` fom common_layouts.py\n",
+    "```python\n",
+    "    def create_writer_layout(console):\n",
+    "        \"\"\"\n",
+    "        Creates the base layout for the writer process\n",
+    "        param console: Console - The Rich Console object to use for output\n",
+    "        \"\"\"\n",
     "\n",
-    "def create_writer_layout(console):\n",
-    "    \"\"\"\n",
-    "    Creates the base layout for the writer process\n",
-    "    param console: Console - The Rich Console object to use for output\n",
-    "    \"\"\"\n",
-    "\n",
-    "    header_text = \"📝 FILE-BASED IPC WRITER STARTED 📝\"\n",
-    "    color = \"cyan\"\n",
-    "    footer_text = \"Writing to: shared_state.json | Press Ctrl+C to stop the writer process.\"\n",
-    "    console.print(create_header(header_text, color))\n",
-    "    console.print(create_footer(footer_text))\n",
-    "\n",
-    "# From common_layouts.py\n",
-    "#================================================================================================\n",
-    "def create_header(header_text, color):\n",
-    "    \"\"\"\n",
-    "    Create the header section\n",
-    "    param header_text: str - The text to display in the header\n",
-    "    param color: str - The color style for the header text and border\n",
-    "    return: Panel - A Rich Panel object containing the header\n",
-    "    \"\"\"\n",
-    "    header_text = Text(header_text, style=f\"bold {color}\", justify=\"center\")\n",
-    "    return Panel(header_text, box=box.DOUBLE, border_style=color)\n",
-    "\n",
-    "def create_footer(footer_text):\n",
-    "    \"\"\"\n",
-    "    Create the footer section\n",
-    "    param footer_text: str - The text to display in the footer\n",
-    "    return: Panel - A Rich Panel object containing the footer\n",
-    "    \"\"\"\n",
-    "    footer_text = Text(\n",
-    "        footer_text,\n",
-    "        style=\"dim cyan\",\n",
-    "        justify=\"center\"\n",
-    "    )\n",
-    "    return Panel(footer_text, box=box.SIMPLE)\n",
-    "#================================================================================================"
+    "        header_text = \"📝 FILE-BASED IPC WRITER STARTED 📝\"\n",
+    "        color = \"cyan\"\n",
+    "        footer_text = \"Writing to: shared_state.json | Press Ctrl+C to stop the writer process.\"\n",
+    "        console.print(create_header(header_text, color))\n",
+    "        console.print(create_footer(footer_text))\n",
+    "```"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5254119c",
+   "cell_type": "markdown",
+   "id": "30c85e49",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def show_menu(console):\n",
-    "    menu = create_menu()\n",
-    "    console.print(menu)\n",
+    "### Main Menu Functions\n",
+    "```python\n",
+    "    def create_main_menu():\n",
+    "        table = Table(title=\"[bold magenta]Available Commands[/bold magenta]\", box=box.SIMPLE_HEAVY)\n",
+    "        table.add_column(\"Command\", style=\"green\")\n",
+    "        table.add_column(\"Description\", style=\"yellow\")\n",
+    "        table.add_row(\"1\", \"Add New Account\")\n",
+    "        table.add_row(\"2\", \"Add New Transaction\")\n",
+    "        table.add_row(\"3\", \"Change View\")\n",
+    "        table.add_row(\"0\", \"Exit\")\n",
+    "        \n",
+    "        return table\n",
     "\n",
-    "    choice = Prompt.ask(\n",
-    "            \"[green]Enter command[/green]\",\n",
-    "            choices=[\"0\", \"1\", \"2\", \"3\", \"4\", \"5\"]\n",
-    "        )\n",
-    "    \n",
-    "    return choice\n",
     "\n",
     "\n",
-    "def create_menu():\n",
-    "    table = Table(title=\"Available Commands\", box=box.SIMPLE_HEAVY)\n",
-    "    table.add_column(\"Command\", style=\"green\")\n",
-    "    table.add_column(\"Description\")\n",
-    "    table.add_row(\"1\", \"Add New Account\")\n",
-    "    table.add_row(\"2\", \"Add New Transaction\")\n",
-    "    table.add_row(\"3\", \"View Summary\")\n",
-    "    table.add_row(\"4\", \"View Accounts\")\n",
-    "    table.add_row(\"5\", \"View Transactions\")\n",
-    "    # table.add_row(\"6\", \"Update Content\")\n",
-    "    # table.add_row(\"7\", \"Show Current State\")\n",
-    "    table.add_row(\"0\", \"Exit\")\n",
-    "    \n",
-    "    return table"
+    "    def show_main_menu(console):\n",
+    "        menu = create_main_menu()\n",
+    "        console.print(menu)\n",
+    "\n",
+    "        choice = Prompt.ask(\n",
+    "                \"[bold green]Enter command[/bold green]\",\n",
+    "                choices=[\"0\", \"1\", \"2\", \"3\"]\n",
+    "            )\n",
+    "        \n",
+    "        return choice\n",
+    "```"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "289547fc",
+   "cell_type": "markdown",
+   "id": "109c5c4d",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def get_new_account_details(console):\n",
-    "    \"\"\"\n",
-    "    Prompt user for new account details and return as a dictionary.\n",
-    "    param console: Console - The Rich Console object to use for input/output\n",
-    "    return: dict - A dictionary containing the new account details\n",
-    "    \"\"\"\n",
+    "### View Choice Menu Functions\n",
+    "```python\n",
+    "    def create_view_choice_menu():\n",
+    "        table = Table(title=\"[bold magenta]Choose View[/bold magenta]\", box=box.SIMPLE_HEAVY)\n",
+    "        table.add_column(\"Command\", style=\"green\")\n",
+    "        table.add_column(\"View\", style=\"yellow\")\n",
+    "        table.add_row(\"1\", \"SUMMARY\")\n",
+    "        table.add_row(\"2\", \"ACCOUNTS\")\n",
+    "        table.add_row(\"3\", \"TRANSACTIONS\")\n",
+    "        return table\n",
     "\n",
-    "    console.print(\"\\n[bold green]Add New Account[/bold green]\")\n",
+    "    def show_view_choice_menu(console):\n",
+    "        \"\"\"\n",
+    "        Prompt user to choose a view and return the selected view.\n",
+    "        param console: Console - The Rich Console object to use for input/output\n",
+    "        return: str - The selected view\n",
+    "        \"\"\"\n",
     "\n",
-    "    account_name = Prompt.ask(\"Enter Account Name: \")\n",
-    "    account_type = Prompt.ask(\"Enter Account Type (e.g., Savings, Checking): \")\n",
-    "    initial_balance = Prompt.ask(\"Enter Initial Balance: \")\n",
+    "        view_menu = create_view_choice_menu()\n",
+    "        print(\"\\n\")\n",
+    "        console.print(view_menu)\n",
     "\n",
-    "    try:\n",
-    "        initial_balance = float(initial_balance)\n",
-    "    except ValueError:\n",
-    "        console.print(\"[red]Invalid balance amount. Please enter a numeric value.[/red]\")\n",
-    "        return\n",
+    "        choice = Prompt.ask(\n",
+    "                \"[bold green]Enter command[/bold green]\",\n",
+    "                choices=[\"1\", \"2\", \"3\"]\n",
+    "            )\n",
+    "        \n",
+    "        match choice:\n",
+    "            case \"1\":\n",
+    "                view = \"SUMMARY\"\n",
+    "            case \"2\":\n",
+    "                view = \"ACCOUNTS\"\n",
+    "            case \"3\":\n",
+    "                view = \"TRANSACTIONS\"\n",
     "\n",
-    "        # Add new account to state\n",
-    "    new_account_details = {\n",
-    "        \"name\": account_name,\n",
-    "        \"type\": account_type,\n",
-    "        \"balance\": initial_balance\n",
-    "    }\n",
-    "\n",
-    "    console.print(f\"[bold green]Account '{account_name}' added successfully![/bold green]\\n\")\n",
-    "    return new_account_details"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "821e986a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Used by add_new_transaction() in transaction.py\n",
-    "\n",
-    "def get_new_transaction_details(account_names, console):\n",
-    "    \"\"\"\n",
-    "    Prompt user for new transaction details and return as a dictionary.\n",
-    "    param console: Console - The Rich Console object to use for input/output\n",
-    "    param account_names: list - A list of account names to choose from\n",
-    "    return: dict - A dictionary containing the new transaction details\n",
-    "    \"\"\"\n",
-    "    console.print(\"\\n[bold green]Add Transaction[/bold green]\")\n",
-    "    account_name = Prompt.ask(\"Select Account\", choices=account_names)\n",
-    "    amount = float(Prompt.ask(\"Enter Amount\"))\n",
-    "    description = Prompt.ask(\"Enter Description\")\n",
-    "\n",
-    "    transaction_details = {\n",
-    "        \"account_name\": account_name,\n",
-    "        \"amount\": amount,\n",
-    "        \"description\": description\n",
-    "    }\n",
-    "\n",
-    "    console.print(f\"[bold green]Transaction added to account '{account_name}' successfully![/bold green]\\n\")\n",
-    "    return transaction_details"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2dd1be87",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Uses by view_account_transactions in writer.py\n",
-    "\n",
-    "def choose_account(accounts, console):\n",
-    "    \"\"\"\n",
-    "    Choose an account from a list of accounts\n",
-    "    param account: dict - The account dictionary\n",
-    "    param console: Console - The Rich Console object to use for output\n",
-    "    \"\"\"\n",
-    "    account_names = [account['name'] for account in accounts]\n",
-    "    account_name = Prompt.ask(\"Select Account\", choices=account_names)\n",
-    "\n",
-    "    #=======================================================================================\n",
-    "    # Generator Expression:\n",
-    "        # Iterates through each account to find the matching account name\n",
-    "        # filtered to only include accounts where the name key matches account_name\n",
-    "        # Yields matching account dictionaries\n",
-    "        # next(...) is a iterator function that retrieves the first item from the generator\n",
-    "            # Stops immediately after finding the first match (efficient!)\n",
-    "            # None - This is the default value:\n",
-    "                # If no matching account is found, next() returns None instead of raising a StopIteration exception\n",
-    "    #=======================================================================================\n",
-    "    # Finds and returns the first account dictionary where account['name'] equals account_name. If no match is found, it returns None.\n",
-    "    account = next((acc for acc in accounts if acc['name'] == account_name), None)\n",
-    "\n",
-    "\n",
-    "    console.print(f\"\\n[bold blue]Selected Account: {account_name}[/bold blue]\")\n",
-    "    return account"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "847b2019",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# not used currently\n",
-    "def choose_view(console):\n",
-    "    \"\"\"\n",
-    "    Choose a view from available views\n",
-    "    param console: Console - The Rich Console object to use for output\n",
-    "    return: str - The selected view name\n",
-    "    \"\"\"\n",
-    "    views = [\"SUMMARY\", \"ACCOUNTS\", \"TRANSACTIONS\"]\n",
-    "    view = Prompt.ask(\"Select View\", choices=views)\n",
-    "    console.print(f\"\\n[bold blue]Selected View: {view}[/bold blue]\")\n",
-    "    return view"
+    "        console.print(f\"\\n[bold blue]Selected View: {view}[/bold blue]\")\n",
+    "        return view\n",
+    "```"
    ]
   }
  ],
